# assecor-assessment-cpp

./: CMakeLists.txt  README.md  main.c
customer-cli/: ErrorHandling.cpp  ErrorHandling.h  KundenDaten.cpp  KundenDaten.h  customer-cli-main.cpp  customer.cpp  interfaceDataSpeichern.h
lib/includes/: KundenArchiv.h  KundenDataFormatter.h  KundenSpeichern.h  customer.h  customer_impl_cxx.h
lib/src/: KundenArchiv.cpp  KundenDataFormatter.cpp  KundenSpeichern.cpp
logfile/: aufgabe_Kundendaten.txt  aufgabe_LibraryImplementation.txt  aufgabe_RefactorHeaderFile.txt
test/aufgabeOneHeaderRefactor/: unittestAlteHeaderLegacyC.cc  unittestAlteHeaderLegacyCpp.cpp  unittestHeaderRefactoredCxx.cpp
test/aufgabeThreeKundenCli/: unittestKundenCli.cpp  unittestUserInputField.cpp
test/aufgabeTwoImplLib/: unittestKundenDataFormatter.cpp  unittestLibraryExtension.cpp  unittestsKundenArchiv.cpp
test/customer_refactor/: legacy_c_code.cc  legacy_cpp_code.cpp  modern_cpp_code.cpp
